--- a/employee_attrition_prediction.ipynb
+++ b/employee_attrition_prediction.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMTlOpduxo4bb8BkKEwa6zA",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -17,18 +15,8 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/sinchana-07/employee_attrition_prediction/blob/main/employee_attrition_prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {
         "id": "QM3hlGE0ceJv"
       },
@@ -78,7 +66,7 @@
         "id": "rh4QUrtwddJP",
         "outputId": "68cb5c7a-988a-48c2-cdbc-4c61787be696"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -797,7 +785,7 @@
         "id": "3F33ckiorAg-",
         "outputId": "2c18c723-737c-44e1-c625-ecfa579e3f1a"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1277,7 +1265,7 @@
         "id": "_DZyRCqSr0oc",
         "outputId": "db3ee443-fdbd-4359-8ebf-2b877488f445"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1336,7 +1324,7 @@
         "id": "7kPwezcbsDmj",
         "outputId": "38af7d6e-3ea6-44f0-f33a-f64d5d2e59a9"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1367,7 +1355,7 @@
         "id": "WAsB6LsYtnzk",
         "outputId": "21900d3c-e316-44fe-c08c-e0ed1bb53bf6"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1406,7 +1394,7 @@
       "metadata": {
         "id": "a4NgXhnMu_4A"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1436,7 +1424,7 @@
         "id": "HLZS-IMXw5ZP",
         "outputId": "ed0efa8b-0764-48aa-80c4-9730262332cd"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1463,7 +1451,7 @@
         "id": "Q8IzJs2qxMfR",
         "outputId": "3d398b34-7273-4481-f7f0-26ad4e59d84b"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1524,7 +1512,7 @@
         "id": "TuO3qp7zxTxY",
         "outputId": "8b1a2535-b469-4928-b19d-c86b04b331d7"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1577,7 +1565,7 @@
         "id": "aYSXGHIfyzY_",
         "outputId": "86b62aed-5371-4396-dccf-db8a69a8fc09"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1643,7 +1631,7 @@
         "id": "B9naeayf0zey",
         "outputId": "c1e4c846-ced0-4a45-b0e6-a19cf6c33886"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1678,7 +1666,7 @@
         "id": "rG-wsYlemzZP",
         "outputId": "9f1ceaea-e1cd-4690-9d97-c3adfc761f72"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1712,7 +1700,7 @@
         "id": "Z0-YB-nQoAdZ",
         "outputId": "9eec3c78-3e15-4bdc-a553-5de021a4ab83"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1735,7 +1723,7 @@
       "metadata": {
         "id": "bxMVSUZ9ojxr"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1751,7 +1739,7 @@
         "id": "Nery8epfpZTi",
         "outputId": "a4afcfec-d1d7-4a1a-cea1-a61fb71718c7"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1778,7 +1766,7 @@
         "id": "Zf5n7JqEph-B",
         "outputId": "2162329e-9d78-46e5-bac2-51a35001684e"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2492,7 +2480,7 @@
       "metadata": {
         "id": "dEjXcZv6plD7"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2503,7 +2491,7 @@
       "metadata": {
         "id": "9wzDRyzSqA8A"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2526,7 +2514,7 @@
         "id": "HIJUjQYlqed1",
         "outputId": "4dc7c4ef-eaa7-409b-aef8-64af13d3b4ee"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2556,7 +2544,7 @@
         "id": "y_6yTucGrUII",
         "outputId": "d20f44af-f1e3-4ea4-caa1-5a823f85bf1c"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2586,7 +2574,7 @@
         "id": "r6qYuKBFrxsf",
         "outputId": "0dc595bf-f436-45c7-bb7e-67692ccd3a8e"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2615,7 +2603,7 @@
         "id": "OJqWUepesIJ-",
         "outputId": "64e4fefd-2a63-41fd-cfc8-4368c61b39ba"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2644,7 +2632,7 @@
         "id": "cFxTiPK_sQRw",
         "outputId": "c910fbe9-afac-472b-d74f-f3d0dbfa9464"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2674,7 +2662,7 @@
         "id": "VtDXrSLNsbUS",
         "outputId": "f241a6f5-b6fc-43af-d1e2-66de0ec7bf94"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2710,7 +2698,7 @@
         "id": "y3WQEzmqssAv",
         "outputId": "1878a991-f947-4543-abf5-fb95d51a446f"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
